--- a/epg-config/pom.xml
+++ b/epg-config/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.hubao</groupId>
-    <artifactId>epg-pay-config</artifactId>
+    <artifactId>epg-config</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>epg-pay-config</name>
-    <description>epg-pay-config</description>
+    <name>epg-config</name>
+    <description>epg-config</description>
     <properties>
         <java.version>17</java.version>
     </properties>
