--- a/epg-pay/epg-pay-api/pom.xml
+++ b/epg-pay/epg-pay-api/pom.xml
@@ -6,14 +6,13 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.0.1</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
     <groupId>org.hubao</groupId>
-    <artifactId>easy-pay-gateway</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <name>easy-pay-gateway</name>
-    <description>easy-支付网关</description>
-
+    <artifactId>epg-pay-api</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>epg-pay-api</name>
+    <description>epg-pay-api</description>
     <properties>
         <java.version>17</java.version>
     </properties>
