--- a/epg-common-utils/pom.xml
+++ b/epg-common-utils/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
+    <packaging>jar</packaging>
     <groupId>org.hubao</groupId>
     <artifactId>epg-common-utils</artifactId>
     <version>1.0.0-SNAPSHOT</version>
