--- a/epg-order/epg-order-api/pom.xml
+++ b/epg-order/epg-order-api/pom.xml
@@ -8,6 +8,8 @@
         <version>3.0.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
+    <packaging>jar</packaging>
     <groupId>org.hubao</groupId>
     <artifactId>epg-order-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
