--- a/epg-config/epg-config-service/pom.xml
+++ b/epg-config/epg-config-service/pom.xml
@@ -3,16 +3,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.1</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>org.hubao</groupId>
+        <artifactId>epg-config</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <packaging>jar</packaging>
     <groupId>org.hubao</groupId>
     <artifactId>epg-config-service</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>epg-config-service</name>
     <description>epg-config-service</description>
     <properties>
