修改epg-pay子模块下父子依赖关系以及版本号 修改epg-config、epg-front、epg-order、epg-pay模块

--- a/epg-order/pom.xml
+++ b/epg-order/pom.xml
@@ -14,6 +14,14 @@
     <version>1.0.0-SNAPSHOT</version>
     <name>epg-order</name>
     <description>epg-order</description>
+
+
+    <modules>
+        <module>epg-order-api</module>
+        <module>epg-order-common</module>
+        <module>epg-order-service</module>
+    </modules>
+
     <properties>
         <java.version>17</java.version>
     </properties>
