--- a/epg-front/pom.xml
+++ b/epg-front/pom.xml
@@ -14,6 +14,15 @@
     <version>1.0.0-SNAPSHOT</version>
     <name>epg-front</name>
     <description>epg-front</description>
+
+
+    <modules>
+        <module>epg-front-config</module>
+        <module>epg-front-order</module>
+        <module>epg-front-pay</module>
+        <module>epg-front-receive</module>
+    </modules>
+
     <properties>
         <java.version>17</java.version>
     </properties>
