--- a/epg-common-utils/pom.xml
+++ b/epg-common-utils/pom.xml
@@ -3,13 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.hubao</groupId>
+        <groupId>org.easypay</groupId>
         <artifactId>easy-pay-gateway</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <packaging>jar</packaging>
-    <groupId>org.hubao</groupId>
+    <groupId>org.easypay</groupId>
     <artifactId>epg-common-utils</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>epg-common-utils</name>
@@ -18,6 +18,7 @@
     <properties>
         <java.version>17</java.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
