--- a/epg-front/epg-front-order/pom.xml
+++ b/epg-front/epg-front-order/pom.xml
@@ -3,13 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.hubao</groupId>
+        <groupId>org.easypay</groupId>
         <artifactId>epg-front</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <packaging>jar</packaging>
-    <groupId>org.hubao</groupId>
+    <groupId>org.easypay</groupId>
     <artifactId>epg-front-order</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>epg-front-order</name>
