--- a/epg-order/epg-order-service/epg-order-service-ext/pom.xml
+++ b/epg-order/epg-order-service/epg-order-service-ext/pom.xml
@@ -4,24 +4,15 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.easypay</groupId>
-        <artifactId>epg-order</artifactId>
+        <artifactId>epg-order-service</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <packaging>jar</packaging>
     <groupId>org.easypay</groupId>
-    <artifactId>epg-order-service</artifactId>
+    <artifactId>epg-order-service-ext</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>epg-order-service</name>
-    <description>epg-order-service</description>
-
-
-    <modules>
-        <module>epg-order-service-ext</module>
-        <module>epg-order-service-internal</module>
-        <module>epg-order-service-page</module>
-    </modules>
-
+    <name>epg-order-service-ext</name>
+    <description>epg-order-service-ext</description>
     <properties>
         <java.version>17</java.version>
     </properties>
